# bibnumber

bibnumber/: CMakeLists.txt  pipeline.cpp  textdetection.cpp  textrecognition.cpp  train.cpp
